--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto de estudo com o intuito de desenvolver uma aplicação completa do zero",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "author": "",
   "license": "MIT",
